// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="gallery container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": <p>
                  HTML
                </p>,
              }
            }
          />
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`GalleryPageTemplate renders childImageSharp fixe 1`] = `
Array [
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`GalleryPageTemplate renders childImageSharp fluid 1`] = `
Array [
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`GalleryPageTemplate renders content correctly 1`] = `
Array [
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`GalleryPageTemplate renders html content correctly 1`] = `
Array [
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": <p>
                  HTML content
                </p>,
              }
            }
          />
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
